Tweaks for 34 to 36 compatibility

--- a/appaloosa/6_7_8_characterization_CMDs_and_outliers.ipynb
+++ b/appaloosa/6_7_8_characterization_CMDs_and_outliers.ipynb
@@ -9,176 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.5/dist-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "['/home/ekaterina/Documents/appaloosa/stars_shortlist/M67/M67_parameter.csv']\n",
-      "Reading library from /home/ekaterina/.specmatchemp/library.h5\n",
-      "T=  5770.0\n",
-      "T=  5770.0\n",
-      "T=  5680.0\n",
-      "T=  5680.0\n",
-      "T=  5770.0\n",
-      "T=  5770.0\n",
-      "T=  5280.0\n",
-      "T=  5280.0\n",
-      "T=  5660.0\n",
-      "T=  5660.0\n",
-      "T=  4830.0\n",
-      "T=  4830.0\n",
-      "T=  4830.0\n",
-      "T=  4830.0\n",
-      "T=  5920.0\n",
-      "T=  5920.0\n",
-      "T=  5660.0\n",
-      "T=  5660.0\n",
-      "T=  5770.0\n",
-      "T=  5770.0\n",
-      "T=  4830.0\n",
-      "T=  4830.0\n",
-      "T=  5920.0\n",
-      "T=  5920.0\n",
-      "T=  5490.0\n",
-      "T=  5490.0\n",
-      "T=  5340.0\n",
-      "T=  5340.0\n",
-      "T=  6170.0\n",
-      "T=  6170.0\n",
-      "T=  5280.0\n",
-      "T=  5280.0\n",
-      "T=  5660.0\n",
-      "T=  5660.0\n",
-      "T=  5920.0\n",
-      "T=  5920.0\n",
-      "T=  5530.0\n",
-      "T=  5530.0\n",
-      "T=  6240.0\n",
-      "T=  6240.0\n",
-      "T=  6040.0\n",
-      "T=  6040.0\n",
-      "T=  4830.0\n",
-      "T=  4830.0\n",
-      "T=  5280.0\n",
-      "T=  5280.0\n",
-      "T=  5170.0\n",
-      "T=  5170.0\n",
-      "T=  6340.0\n",
-      "T=  6340.0\n",
-      "T=  5770.0\n",
-      "T=  5770.0\n",
-      "T=  6170.0\n",
-      "T=  6170.0\n",
-      "T=  5920.0\n",
-      "T=  5920.0\n",
-      "T=  4830.0\n",
-      "T=  4830.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  5770.0\n",
-      "T=  5770.0\n",
-      "T=  5880.0\n",
-      "T=  5880.0\n",
-      "T=  5880.0\n",
-      "T=  5880.0\n",
-      "T=  4070.0\n",
-      "T=  4070.0\n",
-      "T=  5530.0\n",
-      "T=  5530.0\n",
-      "T=  6240.0\n",
-      "T=  6240.0\n",
-      "T=  4830.0\n",
-      "T=  4830.0\n",
-      "T=  5340.0\n",
-      "T=  5340.0\n",
-      "T=  5880.0\n",
-      "T=  5880.0\n",
-      "T=  5340.0\n",
-      "T=  5340.0\n",
-      "T=  5590.0\n",
-      "T=  5590.0\n",
-      "T=  6040.0\n",
-      "T=  6040.0\n",
-      "T=  5660.0\n",
-      "T=  5660.0\n",
-      "T=  5340.0\n",
-      "T=  5340.0\n",
-      "T=  5660.0\n",
-      "T=  5660.0\n",
-      "T=  5920.0\n",
-      "T=  5920.0\n",
-      "T=  6340.0\n",
-      "T=  6340.0\n",
-      "T=  5880.0\n",
-      "T=  5880.0\n",
-      "T=  5920.0\n",
-      "T=  5920.0\n",
-      "T=  5920.0\n",
-      "T=  5920.0\n",
-      "T=  5770.0\n",
-      "T=  5770.0\n",
-      "T=  5280.0\n",
-      "T=  5280.0\n",
-      "T=  5490.0\n",
-      "T=  5490.0\n",
-      "T=  5920.0\n",
-      "T=  5920.0\n",
-      "T=  5660.0\n",
-      "T=  5660.0\n",
-      "T=  6040.0\n",
-      "T=  6040.0\n",
-      "T=  5040.0\n",
-      "T=  5040.0\n",
-      "T=  5170.0\n",
-      "T=  5170.0\n",
-      "T=  5040.0\n",
-      "T=  5040.0\n",
-      "T=  6040.0\n",
-      "T=  6040.0\n",
-      "T=  5920.0\n",
-      "T=  5920.0\n",
-      "T=  5920.0\n",
-      "T=  5920.0\n",
-      "T=  6240.0\n",
-      "T=  6240.0\n",
-      "T=  5920.0\n",
-      "T=  5920.0\n",
-      "T=  6040.0\n",
-      "T=  6040.0\n",
-      "T=  5340.0\n",
-      "T=  5340.0\n",
-      "Index([     'Unnamed: 0',            'gmag',            'rmag',\n",
-      "                  'imag',            'zmag',            'ymag',\n",
-      "                     'J',               'H',               'K',\n",
-      "               'RAJ2000',         'DEJ2000',      'spec_class',\n",
-      "                     'T',            'logT',             'BCv',\n",
-      "                    'Mv',            'logL',             'B-V',\n",
-      "                 'Bt-Vt',             'V-G',             'U-B',\n",
-      "                  'V-Rc',            'V-Ic',            'V-Ks',\n",
-      "                   'J-H',             'H-K',           'Ks-W1',\n",
-      "                 'W1-W2',           'W1-W3',           'W1-W4',\n",
-      "                  'Msun',          'logAge',             'b-y',\n",
-      "                   'M_J',            'M_Ks',            'Mbol',\n",
-      "                   'i-z',             'z-Y',          'R_Rsun',\n",
-      "                '#SpT.1',       'lum_class',             'u_g',\n",
-      "                   'g_r',             'r_i',             'i_z',\n",
-      "                   'z_J',             'J_H',             'H_K',\n",
-      "              'Jmag_abs',              '55',         'L_quiet',\n",
-      "           'L_quiet_bol',             'g_z',             'r_z',\n",
-      "                   'g_i',             'J_K',           'T_err',\n",
-      "            'R_Rsun_err',            '55.1',     'L_quiet_err',\n",
-      "              'Mbol_err',                55, 'L_quiet_bol_err'],\n",
+      "Index(['Unnamed: 0', 'gmag', 'rmag', 'imag', 'zmag', 'ymag', 'J', 'H', 'K',\n",
+      "       'RAJ2000', 'DEJ2000', 'spec_class', 'T', 'logT', 'BCv', 'Mv', 'logL',\n",
+      "       'B-V', 'Bt-Vt', 'V-G', 'U-B', 'V-Rc', 'V-Ic', 'V-Ks', 'J-H', 'H-K',\n",
+      "       'Ks-W1', 'W1-W2', 'W1-W3', 'W1-W4', 'Msun', 'logAge', 'b-y', 'M_J',\n",
+      "       'M_Ks', 'Mbol', 'i-z', 'z-Y', 'R_Rsun', '#SpT.1', 'lum_class', 'u_g',\n",
+      "       'g_r', 'r_i', 'i_z', 'z_J', 'J_H', 'H_K', 'Jmag_abs', '55', 'L_quiet',\n",
+      "       'L_quiet_bol', 'g_z', 'r_z', 'g_i', 'J_K', 'T_err', 'R_Rsun_err',\n",
+      "       '55.1', 'L_quiet_err', 'Mbol_err', '55.1.1', 'L_quiet_bol_err'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -320,9 +166,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>gmag</th>\n",
+       "      <th>rmag</th>\n",
+       "      <th>imag</th>\n",
+       "      <th>zmag</th>\n",
+       "      <th>ymag</th>\n",
+       "      <th>J</th>\n",
+       "      <th>H</th>\n",
+       "      <th>K</th>\n",
+       "      <th>RAJ2000</th>\n",
+       "      <th>...</th>\n",
+       "      <th>J_K</th>\n",
+       "      <th>g_z</th>\n",
+       "      <th>g_i</th>\n",
+       "      <th>T_err</th>\n",
+       "      <th>R_Rsun_err</th>\n",
+       "      <th>59.1</th>\n",
+       "      <th>L_quiet_err</th>\n",
+       "      <th>Mbol_err</th>\n",
+       "      <th>59</th>\n",
+       "      <th>L_quiet_bol_err</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EPIC</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 63 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Unnamed: 0, gmag, rmag, imag, zmag, ymag, J, H, K, RAJ2000, DEJ2000, spec_class, T, logT, BCv, Mv, logL, B-V, Bt-Vt, V-G, U-B, V-Rc, V-Ic, V-Ks, J-H, H-K, Ks-W1, W1-W2, W1-W3, W1-W4, Msun, logAge, b-y, M_J, M_Ks, Mbol, i-z, z-Y, R_Rsun, #SpT.1, lum_class, u_g, g_r, r_i, i_z, z_J, J_H, H_K, Jmag_abs, 59, L_quiet, L_quiet_bol, r_z, J_K, g_z, g_i, T_err, R_Rsun_err, 59.1, L_quiet_err, Mbol_err, 59, L_quiet_bol_err]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 63 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "specs[specs['T']<3000]"
    ]
@@ -338,16 +271,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(155, 63)\n"
+     ]
+    }
+   ],
    "source": [
     "print(specs.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
