Improved K2SC procedure, larger window size for error and increased N2 to 4. Helps with noisy LCs.

--- a/appaloosa/Untitled.ipynb
+++ b/appaloosa/Untitled.ipynb
@@ -9,6 +9,7 @@
     "from astropy.io import fits\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "211938860\n",
     "file = '/home/ekaterina/Documents/appaloosa/stars_shortlist/Pleiades/hlsp_k2sc_k2_llc_211018587-c04_kepler_v2_lc.fits'\n",
     "hdu = fits.open(file)\n",
     "data_rec = hdu[1].data\n",
@@ -179,27 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ColDefs(\n",
-       "    name = 'time'; format = 'D'\n",
-       "    name = 'cadence'; format = 'J'\n",
-       "    name = 'quality'; format = 'J'\n",
-       "    name = 'x'; format = 'D'\n",
-       "    name = 'y'; format = 'D'\n",
-       "    name = 'flux'; format = 'D'\n",
-       "    name = 'error'; format = 'D'\n",
-       "    name = 'mflags'; format = 'B'\n",
-       "    name = 'trtime'; format = 'D'\n",
-       "    name = 'trposi'; format = 'D'\n",
-       ")"
+       "<astropy.io.fits.hdu.table.BinTableHDU at 0x7fda7047b0f0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
