Catching exceptions caused by dropped LCs underway.

--- a/appaloosa/6_7_8_characterization_CMDs_and_outliers.ipynb
+++ b/appaloosa/6_7_8_characterization_CMDs_and_outliers.ipynb
@@ -9,206 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/home/ekaterina/Documents/appaloosa/stars_shortlist/NGC_1647/NGC_1647_parameter.csv']\n",
-      "Reading library from /home/ekaterina/.specmatchemp/library.h5\n",
-      "T=  4830.0\n",
-      "T=  4830.0\n",
-      "T=  5170.0\n",
-      "T=  5170.0\n",
-      "T=  3500.0\n",
-      "T=  3500.0\n",
-      "T=  5280.0\n",
-      "T=  5280.0\n",
-      "T=  4070.0\n",
-      "T=  4070.0\n",
-      "T=  4830.0\n",
-      "T=  4830.0\n",
-      "T=  4070.0\n",
-      "T=  4070.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  5040.0\n",
-      "T=  5040.0\n",
-      "T=  4230.0\n",
-      "T=  4230.0\n",
-      "T=  4230.0\n",
-      "T=  4230.0\n",
-      "T=  4230.0\n",
-      "T=  4230.0\n",
-      "T=  6040.0\n",
-      "T=  6040.0\n",
-      "T=  5170.0\n",
-      "T=  5170.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  4410.0\n",
-      "T=  4410.0\n",
-      "T=  3700.0\n",
-      "T=  3700.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  6170.0\n",
-      "T=  6170.0\n",
-      "T=  5040.0\n",
-      "T=  5040.0\n",
-      "T=  5680.0\n",
-      "T=  5680.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  5680.0\n",
-      "T=  5680.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  3870.0\n",
-      "T=  3870.0\n",
-      "T=  5340.0\n",
-      "T=  5340.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  4830.0\n",
-      "T=  4830.0\n",
-      "T=  6340.0\n",
-      "T=  6340.0\n",
-      "T=  4000.0\n",
-      "T=  4000.0\n",
-      "T=  5340.0\n",
-      "T=  5340.0\n",
-      "T=  4230.0\n",
-      "T=  4230.0\n",
-      "T=  3870.0\n",
-      "T=  3870.0\n",
-      "T=  5170.0\n",
-      "T=  5170.0\n",
-      "T=  5340.0\n",
-      "T=  5340.0\n",
-      "T=  4830.0\n",
-      "T=  4830.0\n",
-      "T=  5590.0\n",
-      "T=  5590.0\n",
-      "T=  4070.0\n",
-      "T=  4070.0\n",
-      "T=  5170.0\n",
-      "T=  5170.0\n",
-      "T=  5720.0\n",
-      "T=  5720.0\n",
-      "T=  6040.0\n",
-      "T=  6040.0\n",
-      "T=  5040.0\n",
-      "T=  5040.0\n",
-      "T=  4410.0\n",
-      "T=  4410.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  4230.0\n",
-      "T=  4230.0\n",
-      "T=  4410.0\n",
-      "T=  4410.0\n",
-      "T=  5280.0\n",
-      "T=  5280.0\n",
-      "T=  6510.0\n",
-      "T=  6510.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  4830.0\n",
-      "T=  4830.0\n",
-      "T=  5530.0\n",
-      "T=  5530.0\n",
-      "T=  6510.0\n",
-      "T=  6510.0\n",
-      "T=  5170.0\n",
-      "T=  5170.0\n",
-      "T=  5340.0\n",
-      "T=  5340.0\n",
-      "T=  5280.0\n",
-      "T=  5280.0\n",
-      "T=  5530.0\n",
-      "T=  5530.0\n",
-      "T=  3870.0\n",
-      "T=  3870.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  4410.0\n",
-      "T=  4410.0\n",
-      "T=  5340.0\n",
-      "T=  5340.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  3500.0\n",
-      "T=  3500.0\n",
-      "T=  6340.0\n",
-      "T=  6340.0\n",
-      "T=  4230.0\n",
-      "T=  4230.0\n",
-      "T=  3800.0\n",
-      "T=  3800.0\n",
-      "T=  4070.0\n",
-      "T=  4070.0\n",
-      "T=  4830.0\n",
-      "T=  4830.0\n",
-      "T=  4070.0\n",
-      "T=  4070.0\n",
-      "T=  5280.0\n",
-      "T=  5280.0\n",
-      "T=  4000.0\n",
-      "T=  4000.0\n",
-      "T=  4000.0\n",
-      "T=  4000.0\n",
-      "T=  4620.0\n",
-      "T=  4620.0\n",
-      "T=  5720.0\n",
-      "T=  5720.0\n",
-      "T=  5490.0\n",
-      "T=  5490.0\n",
-      "T=  5660.0\n",
-      "T=  5660.0\n",
-      "T=  4410.0\n",
-      "T=  4410.0\n",
-      "T=  5040.0\n",
-      "T=  5040.0\n",
-      "T=  5040.0\n",
-      "T=  5040.0\n",
-      "T=  3410.0\n",
-      "T=  3410.0\n",
-      "T=  5660.0\n",
-      "T=  5660.0\n",
-      "T=  5170.0\n",
-      "T=  5170.0\n",
-      "Index([     'Unnamed: 0',            'gmag',            'rmag',\n",
-      "                  'imag',            'zmag',            'ymag',\n",
-      "                     'J',               'H',               'K',\n",
-      "               'RAJ2000',         'DEJ2000',         'results',\n",
-      "            'spec_class',               'T',            'logT',\n",
-      "                   'BCv',              'Mv',            'logL',\n",
-      "                   'B-V',           'Bt-Vt',             'V-G',\n",
-      "                   'U-B',            'V-Rc',            'V-Ic',\n",
-      "                  'V-Ks',             'J-H',             'H-K',\n",
-      "                 'Ks-W1',           'W1-W2',           'W1-W3',\n",
-      "                 'W1-W4',            'Msun',          'logAge',\n",
-      "                   'b-y',             'M_J',            'M_Ks',\n",
-      "                  'Mbol',             'i-z',             'z-Y',\n",
-      "                'R_Rsun',          '#SpT.1',       'lum_class',\n",
-      "                   'u_g',             'g_r',             'r_i',\n",
-      "                   'i_z',             'z_J',             'J_H',\n",
-      "                   'H_K',        'Jmag_abs',              '57',\n",
-      "               'L_quiet',        'L_quiet2',             'J_K',\n",
-      "                   'r_z',             'g_z',             'g_i',\n",
-      "                  '57.1',     'L_quiet_bol',     'L_quiet_err',\n",
-      "            'R_Rsun_err',           'T_err',          '57.1.1',\n",
-      "              '57.1.1.1',      '57.1.1.1.1',        'Mbol_err',\n",
-      "                      57, 'L_quiet_bol_err'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
@@ -231,8 +34,8 @@
     "DM = lambda x: 5.*np.log10(float(x))-5. \n",
     "\n",
     "#------------------------------------------------\n",
-    "cluster = 'NGC_1647'\n",
-    "test = 'run_02'\n",
+    "cluster = 'M44'\n",
+    "test = 'run_05'\n",
     "#------------------------------------------------\n",
     "\n",
     "basics = cluster_dict[cluster]\n",
@@ -271,26 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "EPIC\n",
-       "211986537    0.303129\n",
-       "211992451    0.331933\n",
-       "211988997    0.359067\n",
-       "211990953    0.425637\n",
-       "211996831    0.250111\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "r = specs.L_quiet_err/specs.L_quiet\n",
     "r.head()"
@@ -363,103 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>gmag</th>\n",
-       "      <th>rmag</th>\n",
-       "      <th>imag</th>\n",
-       "      <th>zmag</th>\n",
-       "      <th>ymag</th>\n",
-       "      <th>J</th>\n",
-       "      <th>H</th>\n",
-       "      <th>K</th>\n",
-       "      <th>RAJ2000</th>\n",
-       "      <th>...</th>\n",
-       "      <th>J_K</th>\n",
-       "      <th>g_z</th>\n",
-       "      <th>g_i</th>\n",
-       "      <th>T_err</th>\n",
-       "      <th>R_Rsun_err</th>\n",
-       "      <th>61</th>\n",
-       "      <th>L_quiet_err</th>\n",
-       "      <th>Mbol_err</th>\n",
-       "      <th>61</th>\n",
-       "      <th>L_quiet_bol_err</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EPIC</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>0 rows × 63 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Unnamed: 0, gmag, rmag, imag, zmag, ymag, J, H, K, RAJ2000, DEJ2000, spec_class, T, logT, BCv, Mv, logL, B-V, Bt-Vt, V-G, U-B, V-Rc, V-Ic, V-Ks, J-H, H-K, Ks-W1, W1-W2, W1-W3, W1-W4, Msun, logAge, b-y, M_J, M_Ks, Mbol, i-z, z-Y, R_Rsun, #SpT.1, lum_class, u_g, g_r, r_i, i_z, z_J, J_H, H_K, Jmag_abs, 35, L_quiet, L_quiet_bol, r_z, J_K, g_z, g_i, T_err, R_Rsun_err, 61, L_quiet_err, Mbol_err, 61, L_quiet_bol_err]\n",
-       "Index: []\n",
-       "\n",
-       "[0 rows x 63 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "specs[specs['T']<3000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,24 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(82, 68)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(specs.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
