Cleaned up version of master project, unmerged with desk version

--- a/appaloosa/PLeiades_riddle.ipynb
+++ b/appaloosa/PLeiades_riddle.ipynb
@@ -100,8 +100,8 @@
     "import pandas as pd\n",
     "from appaloosa import RunLC\n",
     "\n",
-    "file = '/home/ekaterina/Documents/appaloosa/stars_shortlist/M44/hlsp_everest_k2_llc_211943618-c05_kepler_v2.0_lc.fits'\n",
-    "RunLC(file=file, dbmode='everest', display=True, debug=True, dofake=False)"
+    "file = '/home/ekaterina/Documents/appaloosa/stars_shortlist/Pleiades/hlsp_k2sc_k2_llc_211085091-c04_kepler_v2.0_lc.fits'\n",
+    "#RunLC(file=file, dbmode='everest', display=True, debug=True, dofake=False)"
    ]
   },
   {
