--- a/appaloosa/PyKE_Cosmics.ipynb
+++ b/appaloosa/PyKE_Cosmics.ipynb
@@ -19,6 +19,7 @@
     "import pyke as pk\n",
     "import pandas as pd\n",
     "oid=211410963\n",
+    "c='Pleiades'\n",
     "loc = 'stars_shortlist/M67'\n",
     "tpf_loc = 'stars_shortlist/M67/ktwo{}-c05_lpd-targ.fits.gz'.format(oid)\n",
     "lc_loc = 'stars_shortlist/M67/hlsp_everest_k2_llc_{}-c05_kepler_v2.0_lc.fits'.format(oid)\n"
