updated photometry and set up better characterization from synthetic

--- a/appaloosa/06_07_08_characterization_CMDs_and_outliers.ipynb
+++ b/appaloosa/06_07_08_characterization_CMDs_and_outliers.ipynb
@@ -153,10 +153,10 @@
    ],
    "source": [
     "from f_6_7_8 import interactive_CMD\n",
-    "crs = {'g_i':('gmag','imag'),\n",
+    "crs = {'g_i':('SDSS_g','SDSS_i'),\n",
     "       'J_K':('J','K'),\n",
-    "       'r_z':('rmag','zmag'),\n",
-    "       'g_z':('gmag','zmag'),}\n",
+    "       'r_z':('SDSS_r','SDSS_z'),\n",
+    "       'g_z':('SDSS_g','SDSS_z'),}\n",
     "\n",
     "for key, c in crs.items():\n",
     "    print(c[0],c[1])\n",
@@ -1388,7 +1388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.6"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
