Reprocessed sample setup matched with PS1

--- a/appaloosa/05_extract_EPIC_IDs_for_LC_search.ipynb
+++ b/appaloosa/05_extract_EPIC_IDs_for_LC_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4  23.43919  DH045                           13.98    6.22  best       1  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,8 +362,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -547,7 +549,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -769,13 +771,13 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loc = 'stars_shortlist/M44/results/run_06/results/catalog'\n",
+    "loc = 'stars_shortlist/M44/results/run_06/catalog'\n",
     "df4 = pd.read_csv('{}/Douglas.tsv'.format(loc), sep='\\t',skiprows=103)\n",
     "df4 = df4.rename(index=str,columns={'_RA':'RAJ2000','_DE':'DEJ2000'})\n",
     "df4 = df4.drop(['_RAJ2000','_DEJ2000'],axis=1)\n",
@@ -784,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -921,13 +923,13 @@
        "4  132.984088  11.477908  N16  H16  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loc = 'stars_shortlist/M67/results/run_06/results/catalog'\n",
+    "loc = 'stars_shortlist/M67/results/run_06/catalog'\n",
     "df5 = pd.read_csv('{}/Gonzalez.tsv'.format(loc), sep='\\t',skiprows=59)\n",
     "df5 = df5.rename(index=str,columns={'_RA':'RAJ2000','_DE':'DEJ2000'})\n",
     "df5 = df5.drop(['_RAJ2000','_DEJ2000','SimbadName'],axis=1)\n",
@@ -936,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,6 +946,13 @@
     "df5 = df5[df5.Class.isin(['M','SM','BM']) ]\n",
     "df5.to_csv('{}/M67_init.csv'.format(loc))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
