--- a/appaloosa/06_07_08_characterization_CMDs_and_outliers.ipynb
+++ b/appaloosa/06_07_08_characterization_CMDs_and_outliers.ipynb
@@ -49,26 +49,22 @@
     "\n",
     "from f_6_7_8 import merged_spec_class, Mbol_to_Lum, kepler_luminosity, L_quieterr\n",
     "\n",
-    "cluster_dict = {'M67':['M67','M67', 15, 4.0, 850],\n",
-    "                'Ruprecht_147':['Ruprecht 147','Ruprecht_147', 30, 2.5, 300.],\n",
-    "                'M44':['M44','M44', 47, 0.73, 181.5],\n",
-    "                'M45':['M45','M45',55.,0.12,120.],\n",
-    "                'NGC_1647':['NGC 1647','NGC_1647',0.,0.145,550.],\n",
-    "                'Pleiades':['Pleiades','Pleiades',0.,0.100,136.]\n",
+    "cluster_dict = {'M67':['M67','M67', 15, 4.0, 908.],\n",
+    "                'M44':['M44','M44', 47, 0.73, 160.],\n",
+    "                'Pleiades':['Pleiades','Pleiades',0.,0.100,135.]\n",
     "               }\n",
     "DM = lambda x: 5.*np.log10(float(x))-5. \n",
     "\n",
     "#------------------------------------------------\n",
     "cluster = 'M44'\n",
-    "test = 'run_05'\n",
+    "test = 'run_06'\n",
     "#------------------------------------------------\n",
     "\n",
     "basics = cluster_dict[cluster]\n",
     "dm = DM(basics[4])\n",
     "global dm\n",
-    "l = 'stars_shortlist/{0}/{0}_parameter.csv'.format(cluster)\n",
+    "l = 'stars_shortlist/{0}/{1}/catalog/{0}_parameter.csv'.format(cluster, test)\n",
     "\n",
-    "#l = '/home/ekaterina/Documents/appaloosa/stars_shortlist/{0}/{0}_parameter.csv'.format(cluster)\n",
     "print(glob.glob(l))\n",
     "\n",
     "if glob.glob(l) != []:\n",
@@ -1388,7 +1384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.6"
   }
  },
  "nbformat": 4,
