plotting for paper draft

--- a/appaloosa/ZZ_photometry_convert.ipynb
+++ b/appaloosa/ZZ_photometry_convert.ipynb
@@ -81,9 +81,22 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "#for reference\n",
+    "s['J-H'] = s.J - s.H\n",
+    "s['H-K'] = s.H - s.K\n",
+    "s['i-z'] = s.imag - s.zmag\n",
+    "s['z-Y'] = s.zmag - s.ymag\n",
+    "\n",
+    "s['g-r'] = s.gmag - s.rmag\n",
+    "s['r-i'] = s.rmag - s.imag\n",
+    "s['i-z'] = s.imag - s.zmag\n",
+    "s['z-J'] = s.zmag - s.J"
+   ]
   },
   {
    "cell_type": "code",
@@ -109,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.6"
   }
  },
  "nbformat": 4,
